# bedrock-quota

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
bedrock_quota/: __init__.py  __main__.py  app.py  app.tcss  aws_client.py  cloudwatch_service.py  detail.tcss  detail_screen.py  models.py  pricing_service.py  provider_screen.py  quota_service.py  region_screen.py  time_periods.py
