[project]
name = "bedrock-quota"
version = "1.1.0"
description = "A CLI-based dashboard to see your AWS Bedrock model quotas and usage."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Almog Baku" }]
keywords = [
    "aws",
    "bedrock",
    "cloudwatch",
    "quota",
    "tui",
    "textual",
    "cli",
    "monitoring",
    "terminal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=1.0.0",
    "boto3>=1.34.0",
    "python-dateutil>=2.9.0",
    "textual-plotext>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/Kelet-ai/bedrock-quota"
Repository = "https://github.com/Kelet-ai/bedrock-quota"
Issues = "https://github.com/Kelet-ai/bedrock-quota/issues"
Changelog = "https://github.com/Kelet-ai/bedrock-quota/releases"

[project.scripts]
bedrock-quota = "bedrock_quota.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  ".claude",
  ".agents",
  ".impeccable.md",
  "skills-lock.json",
  ".github/assets",
  "Bedrock_Quotas_Dashboard_*.svg",
]

[tool.hatch.build.targets.wheel]
packages = ["bedrock_quota"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
upload_to_vcs_release = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "breaking", "chore", "docs", "style", "ci"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^chore",
    "^docs",
    "^style",
    "^ci",
]

[tool.semantic_release.branches.master]
match = "master"
prerelease = false

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
build_command = """
uv lock --upgrade-package bedrock-quota
git add uv.lock
uv build
"""
